--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ body{
     background-image: url("./img/back.jpg");
     
 }
+.container{
+    max-width: 1440px;
+}
 .box{
     /* margin: auto;
     top: 50px;
